# labs_prog

./: Ball.cpp  Ball.hpp  CMakeLists.txt  DocController.h  Document.h  Dust.cpp  Dust.hpp  GraphicPrimitive.h  Painter.cpp  Physics.cpp  Physics.h  README.md  Velocity.h  World.cpp  World.h  cool.cpp  cool.h  main.cpp
.github/workflows/: realese.yml  release.yml
__MACOSX/: ._lab1_actions
gtests/: CMakeLists.txt  tests.cpp
